--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
 	    svg .shadow {
 	    	text-shadow: 0px 0px 2px #e6e6e6;
 	    }
+	    body div{
+	    	/*margin: 10px 10px;*/
+	    	/*padding: 10px 10px;*/
+	    	border: 1px solid #ccc;
+	    	background: #999999;
+	    	color: #fff;
+	    	width: 100px;
+	    	float: left;
+	    }
+	    body div#controller{
+	    	clear: both;
+	    }
 	</style>
 
 	<!-- d3.js -->
@@ -66,6 +78,22 @@
 				}
 			});
 
+			var e = $("body div div");
+			e.on("mouseover", function(e){
+				emotionFilteredView(this);
+			}).on("mouseout", function(e){
+				emotionNormalView(this);
+			});
+			var emotionFilteredView = function(e){
+				var emotion = $(e).attr("data-emotion");
+				onMouseOver(emotion);
+			};
+			var emotionNormalView = function(e){
+				var emotion = $(e).attr("data-emotion");
+				onMouseOut(emotion);
+			}
+
+
 			var onMouseOver = function(key){
 				var self = d3.select(this);
 				var sameClassCircle = d3.selectAll("."+key);
@@ -74,7 +102,9 @@
 				anotherClassCircle.transition()
 					.attr("r", "0");
 				sameClassCircle.transition()
-					.attr("r", function(d){ return d[key]*15; });
+					.attr("r", function(d){ return d[key]*15; })
+					// .attr("cx", function(d){ return timeFormatToWeek(d["day"])*100+40; })
+					// .attr("cy", function(d){ return (timeFormatToWeekCount(d["day"])-weekCountOffset)*100+40; })
 			};
 
 
@@ -90,7 +120,9 @@
 					this.__ontest();
 				})
 				sameClassCircle.transition()
-					.attr("r", function(d){ return d[key]*10; });
+					.attr("r", function(d){ return d[key]*10; })
+					// .attr("cx", function(d){ return timeFormatToWeek(d["day"])*100+emotionCircleOffsets[key]["x"]; })
+					// .attr("cy", function(d){ return (timeFormatToWeekCount(d["day"])-weekCountOffset)*100+emotionCircleOffsets[key]["y"]; })
 			}
 
 			var Container = function(data){
@@ -136,10 +168,10 @@
 							var other = d3.selectAll("circle");
 							var sameClass = d3.selectAll("."+key);
 							self.attr("fill", "url(#"+key+")")
-								.attr("opacity", 0)
+								// .attr("opacity", 0)
 								.transition()
 								.attr("r", function(d){ return d[key]*10; })
-								.attr("opacity", 1);
+								// .attr("opacity", 1);
 						})
 						.transition()
 						.duration(1300)
@@ -169,6 +201,16 @@
 	</script>
 </head>
 <body style="text-align:center;height: ">
+
+	<div id="controller">
+		<div data-emotion="angry">1</div>
+		<div data-emotion="grief">2</div>
+		<div data-emotion="vigilance">3</div>
+		<div data-emotion="joy">4</div>
+		<div data-emotion="terror">5</div>
+		<div data-emotion="amazement">6</div>
+	</div>
+
 	<svg width="700" height="500" style="width:700px; heighy:500px; margin: auto auto;">
 
 		<radialGradient id="angry" gradientUnits="userSpaceOnUse" cx="50%" cy="50%" r="75%">
