--- a/index.html
+++ b/index.html
@@ -25,11 +25,48 @@
 				background: #ccc;
 				padding: 5px 5px;
 				margin: 10px 10px;
-				border-radius: 10px 10px;
+				border-radius: 50% 50%;
+				border: 2px solid #FFF;
+				cursor: pointer;
+				color: #333;
+				-webkit-box-sizing: 0px 0px 2px #ccc;
+				-moz-box-sizing: 0px 0px 2px #ccc;
+				box-sizing: 0px 0px 2px #ccc;
+		}
+		#controller div:hover{
+			position: relative;
+			top: -2px;
+			left: -2px;		
 		}
 		svg circle{
 			cursor: pointer;
 		}
+
+		.angry{
+		  background-color: #ff8c8c;
+		}
+
+		/* 悲痛 grief */ 
+		.grief{
+		  background-color: #8c8cff;
+		}
+
+		/* 恐怖 terror */ 
+		.terror{
+		  background-color: #8cc68c;
+		}
+
+
+		/* 喜び extasy */ 
+		.extasy{
+		  background-color: #ffffb1;
+		}
+
+		/* 警戒 vigilance */ 
+		.vigilance{
+		  background-color: #ffc48c;
+		}
+
 	</style>
 
 	<!-- d3.js -->
@@ -47,47 +84,40 @@
 			<h1 class="uk-heading-large" style="border-bottom:1px solid #ccc;">Calendar</h1>
 
 			<div style="text-align:center">
-				<h2>2014 / 3</h2>
-				<svg width="600" height="800" style="width:700px;height:600px" class="uk-container-center">
+				<h2>2014 年 3 月</h2>
+				<svg width="600" height="800" style="width:700px;height:600px">
 					<radialGradient id="angry" gradientUnits="userSpaceOnUse" cx="50%" cy="50%" r="75%">
 						<stop stop-color="#fd6b78" offset="0"/>
 						<stop stop-color="#fcada4" offset="1"/>
 					</radialGradient>
-
 					<radialGradient id="grief" gradientUnits="userSpaceOnUse" cx="50%" cy="50%" r="75%">
 						<stop stop-color="#5b78eb" offset="0"/>
 						<stop stop-color="#92bbf4" offset="1"/>
 					</radialGradient>
-
 					<radialGradient id="vigilance" gradientUnits="userSpaceOnUse" cx="50%" cy="50%" r="75%">
 						<stop stop-color="#fdc780" offset="0"/>
 						<stop stop-color="#fdc780" offset="1"/>
 					</radialGradient>
-
 					<radialGradient id="joy" gradientUnits="userSpaceOnUse" cx="50%" cy="50%" r="100%">
 						<stop stop-color="#ffff00" offset="0"/>
 						<stop stop-color="#ffff66" offset="1"/>
 					</radialGradient>
-
 					<radialGradient id="terror" gradientUnits="userSpaceOnUse" cx="50%" cy="50%" r="75%">
 						<stop stop-color="#84f183" offset="0"/>
 						<stop stop-color="#85ff8b" offset="1"/>
 					</radialGradient>
-
 					<radialGradient id="amazement" gradientUnits="userSpaceOnUse" cx="50%" cy="50%" r="75%">
 						<stop stop-color="#3bb3ff" offset="0"/>
 						<stop stop-color="#3bb3ff" offset="1"/>
 					</radialGradient>
 				</svg>
-
-
 				<div id="controller">
-					<div class="uk-button" data-emotion="angry">怒り</div>
-					<div class="uk-button" data-emotion="grief">悲しみ</div>
-					<div class="uk-button" data-emotion="vigilance">期待</div>
-					<div class="uk-button" data-emotion="joy">楽しみ</div>
-					<div class="uk-button" data-emotion="terror">恐れ</div>
-					<div class="uk-button" data-emotion="amazement">驚き</div>
+					<div class="uk-button angry" style="background:#f9646f" data-emotion="angry">怒り</div>
+					<div class="uk-button grief" style="background:#6b8eec" data-emotion="grief">悲しみ</div>
+					<div class="uk-button vigilance" style="background:#fcbc6c" data-emotion="vigilance">期待</div>
+					<div class="uk-button joy" style="background:#fbff13" data-emotion="joy">楽しみ</div>
+					<div class="uk-button terror" style="background:#77fd75" data-emotion="terror">恐れ</div>
+					<div class="uk-button amazement" style="background:#31a2ff" data-emotion="amazement">驚き</div>
 				</div>
 			</div>
 		</div>	
