--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/backbone.js"></script>
 	<script type="text/javascript" src="js/day.js"></script>
+	<link href="http://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" type="text/css">
 	
 	<!-- uikit -->
 	<link rel="stylesheet" href="css/uikit.css">
@@ -16,6 +17,7 @@
 	<style>
 		body{
 			background: #e6e6e6;
+			background: URL("img/background.png");
 		}
 		h1{
 			margin: 10px 10px;
